# magnet-handler

./: magnet-handler.cabal
src/: Main.hs
