name:                magnet-handler
version:             0.1.0.0
synopsis:            Magnet URI handler that adds links via "ssh transmission-remote -a"
description:         Please see README.md
homepage:            https://github.com/elitak/magnet-handler#readme
author:              Eric Litak
maintainer:          elitak@gmail.com
copyright:           2015 Eric Litak
build-type:          Simple
cabal-version:       >=1.10

executable magnet-handler
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , shakespeare
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elitak/magnet-handler
